# litter

./: .gitignore  Makefile  README.md
.factory/: init.sh  services.yaml
.factory/skills/platform-ui-worker/: SKILL.md
.factory/skills/rust-backend-worker/: SKILL.md
.factory/validation/acp-client/scrutiny/: synthesis.json
.factory/validation/acp-client/user-testing/: synthesis.json
.factory/validation/cross-integration/scrutiny/: synthesis.json
.factory/validation/cross-integration/user-testing/: synthesis.json
.factory/validation/detection-rust/scrutiny/: synthesis.json
.factory/validation/detection-rust/user-testing/: synthesis.json
.factory/validation/detection-wiring/: contract.md
.factory/validation/discovery-cleanup/scrutiny/: synthesis.json
.factory/validation/discovery-cleanup/user-testing/: synthesis.json
.factory/validation/droid-provider/scrutiny/: synthesis.json
.factory/validation/droid-provider/user-testing/: synthesis.json
.factory/validation/ffi-routing/scrutiny/: synthesis.json
.github/workflows/: android-apk-release.yml  android-play-release.yml  mobile-ci.yml  mobile-release.yml
apps/ios/: project.yml
apps/ios/Litter.xcodeproj/: project.pbxproj
patches/codex/: client-controlled-handoff.patch
services/website/public/: index.html
shared/rust-bridge/codex-debug-cli/: Cargo.toml
shared/rust-bridge/codex-debug-cli/src/: main.rs
shared/rust-bridge/codex-mobile-client/: Cargo.toml
tools/scripts/: README.md  build-unsigned-ipa.sh  codex-app-driver.applescript  codex-desktop-controller.mjs
(+329 files in other folders)
