[package]
name = "codex-debug-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "codex-debug-cli"
path = "src/main.rs"

[dependencies]
codex-mobile-client = { path = "../codex-mobile-client" }
codex-ipc = { path = "../codex-ipc" }
codex-app-server-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
async-trait = { workspace = true }
